--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@types/marked": "^6.0.0",
     "gray-matter": "^4.0.3",
+    "marked": "^16.2.0",
     "next": "15.5.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
