--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "build": "next build",
     "start": "next start",
     "lint": "eslint",
-    "new:episode": "node scripts/new-episode.js"
+    "new:episode": "node scripts/new-episode.js",
+    "new:diary": "node scripts/new-diary.js"
   },
   "dependencies": {
     "@types/marked": "^6.0.0",
