feat: Improve top page UI with draggable scroll and refined styles

--- a/contents/comics/my-manga/episode-04/meta.yaml
+++ b/contents/comics/my-manga/episode-04/meta.yaml
@@ -1,6 +1,8 @@
-title: "第4話 YOUR_TITLE_HERE"
-date: "2025-08-22"
-tags: []
+title: "第4話 「竜と少年」"
+date: "2025-08-24"
+tags: [冒険, ファンタジー]
 pages:
-  - "YOUR_IMAGE_URL_HERE_1.jpg"
-  - "YOUR_IMAGE_URL_HERE_2.jpg"
+  - "https://comic-site-v1-images-lgpq.s3.ap-northeast-1.amazonaws.com/comics/my-manga/episode-04/001.png"
+  - "https://comic-site-v1-images-lgpq.s3.ap-northeast-1.amazonaws.com/comics/my-manga/episode-04/002.png"
+  - "https://comic-site-v1-images-lgpq.s3.ap-northeast-1.amazonaws.com/comics/my-manga/episode-04/003.png"
+  - "https://comic-site-v1-images-lgpq.s3.ap-northeast-1.amazonaws.com/comics/my-manga/episode-04/004.png"
