feat: add illustration lightbox

--- a/contents/illustrations/meta.yaml
+++ b/contents/illustrations/meta.yaml
@@ -2,6 +2,7 @@
   date: "2024-07-15"
   tags: ["オリジナル", "キャンプ"]
   url: "https://comic-site-v1-images-lgpq.s3.ap-northeast-1.amazonaws.com/illustrations/0001.png"
+  comment: "夏の思い出をテーマに描きました。背景の入道雲がお気に入りです。"
 
 - title: "I'm blue man"
   date: "2024-07-16"
