--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@types/marked": "^6.0.0",
+    "date-fns": "^2.30.0",
     "gray-matter": "^4.0.3",
     "marked": "^16.2.0",
     "next": "15.5.0",
